# Chronogram

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  memory-implementation.md  memory-prd.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-reference.yml  promote-release.yml  release-images.yml
apps/api/: deps.py  main.py
apps/cli/: main.py
apps/dashboard/: package-lock.json  package.json
apps/mcp_server/: main.py
apps/memory-api/: Dockerfile  package.json
apps/onboarding-ui/: package.json
apps/worker/: Dockerfile  package.json
apps/workers/: main.py
deploy/k8s/: README.md  alertmanagerconfig.example.yaml  configmap.yaml  external-secret.example.yaml  hpa.yaml  ingress.example.yaml  memory-api-deployment.yaml  namespace.yaml  networkpolicy.yaml  platform-secrets.example.yaml  poddisruptionbudgets.yaml  podmonitor.example.yaml  prometheusrule.example.yaml  secret.example.yaml  servicemonitor.example.yaml  worker-deployment.yaml
docs/architecture/: system-overview.md
docs/assets/: chronogram-architecture.html
docs/deployment/: backup-and-restore.md  distributed-open-source-deployment.md  production-readiness.md
docs/runbooks/: release.md  (+1 more)
integrations/: README.md
scripts/: benchmark_embeddings.py  bootstrap.mjs  graphiti_bridge.py  production-readiness.mjs  test_mcp_e2e.py  verify_e2e.py  warm-embedding-model.mjs
tests/: test_api.py  test_harness.py  test_ingestion.py
(+83 files in other folders)
