[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memcortex"
version = "0.1.0"
description = "Local-first cognitive sidecar for coding agent harnesses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "redis>=5.0.8",
  "neo4j>=5.23.1",
  "weaviate-client>=4.7.1",
  "temporalio>=1.7.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pyyaml>=6.0.2",
  "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.1"
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*", "temporal*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
